--- a/src/app/assets/styles/globals.css
+++ b/src/app/assets/styles/globals.css
@@ -1,7 +1,7 @@
-@import './utils.css';
+@import './components.css';
+@import './utilities.css';
 
 @tailwind base;
-@tailwind components;
 @tailwind utilities;
 
 body {
