style: Darken skills blocks slightly in dark mode

--- a/src/app/assets/styles/components.css
+++ b/src/app/assets/styles/components.css
@@ -4,4 +4,10 @@
   .skills-block {
     @apply bg-stone-200 box-border px-2 py-2 flex justify-center items-center rounded-lg;
   }
+
+  @media (prefers-color-scheme: dark) {
+    .skills-block {
+      @apply bg-stone-300;
+    }
+  }
 }
